# VidyaOS

./: .gitignore  CMakeLists.txt  Makefile.standalone  README.md  prj.conf  readme.md  test_footprint.in  test_gui.in  test_phase1.in  test_phase2.in  test_phase3.in  test_phase5.in  test_telemetry.in  vidyaos-desktop
boards/: native_sim.conf  native_sim.overlay  nrf9161dk_nrf9161_ns.overlay
buildroot/board/vidyaos/: kernel.config
buildroot/board/vidyaos/rauc/: manifest.raucm  system.conf
buildroot/board/vidyaos/rootfs_overlay/etc/: inittab
buildroot/board/vidyaos/rootfs_overlay/etc/init.d/: S99vidyaos
buildroot/board/vidyaos/rootfs_overlay/etc/vidya/: appstore.json  settings.json
buildroot/board/vidyaos/rootfs_overlay/var/www/: index.html  mail.html  news.html  store.html
buildroot/configs/: vidyaos_defconfig  vidyaos_qemu_aarch64_defconfig
buildroot/package/vidyaos-desktop/: Config.in  vidyaos-desktop.mk
buildroot/package/vidyaos-native/: Config.in  vidyaos-native.mk
dts/bindings/: custom,virtual-sensor.yaml
include/: browser.h  font.h  footprint.h  graphics.h  platform.h  platform_linux.h  shell.h  state.h
platform/linux/: browser.cpp  fs.cpp  net.cpp  user.cpp
scripts/: install_usb.sh
src/: footprint.cpp  graphics.cpp  main.cpp  shell.cpp  state.cpp  virtual_sensor.c
vidya_node_daemon/: ARCHITECTURE.md  binding.gyp  index.js  package.json  test.js
vidya_node_daemon/services/: gemini.js  settings.js
vidya_node_daemon/src/: resolution.cpp
web_vidyaos/: index.html  package-lock.json  package.json
web_vidyaos/src/: App.tsx  index.css
